--- a/test.ipynb
+++ b/test.ipynb
@@ -2,29 +2,6 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "m"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 22,
    "metadata": {},
    "outputs": [],
@@ -42,11 +19,13 @@
     "        self.m = MongoDBUtil(connection_string=CONNECTION_STRING)\n",
     "        self.db = db\n",
     "        self.collection = collection\n",
+    "        self.update_ts = dt.datetime.now()\n",
     "    def fetch_then_upload(self) -> None:\n",
     "        queue = []\n",
     "        page = 1\n",
     "        while True:\n",
-    "            url = f'https://www.klook.com/v1/experiencesrv/category/activity?frontend_id_list=19&size=24&start={page}'\n",
+    "            url = f'https://www.klook.com/v1/experiencesrv/category/ \\\n",
+    "            activity?frontend_id_list=19&size=24&start={page}'\n",
     "            headers = {'accept-language': 'zh_TW', \n",
     "                    'currency': 'TWD'}\n",
     "            r = requests.get(url=url, headers=headers)\n",
@@ -58,11 +37,17 @@
     "            page += 1\n",
     "\n",
     "        final_result = pd.concat(queue).reset_index(drop=True)\n",
-    "        self.m.upsert2mongo(df=final_result, db=self.db, collection=self.collection, matched_columns=[], update_columns=[])\n",
+    "        final_result['update_ts'] = self.update_ts\n",
+    "        final_result['review_star'] = final_result['review_star'].astype(float)\n",
+    "        self.m.upsert2mongo(df=final_result[['activity_id','title','reveiw_star','update_ts']],\n",
+    "                            db=self.db,\n",
+    "                            collection=self.collection,\n",
+    "                            matched_columns=['activity_id'],\n",
+    "                            update_columns=['title','review_star','update_ts'])\n",
     "    \n",
     "    def filter_then_export(self) -> None:\n",
     "        data = self.m.to_dataframe(db=self.db, collection=self.collection)\n",
-    "        data = data[data['review_star'] >= 4]\n",
+    "        data = data[(data['review_star'] >= 4) & (data['update_ts'] == self.update_ts)]\n",
     "        now = dt.datetime.now().strftime('%Y-%m-%d')\n",
     "        pd.to_csv(f'data_{now}.csv')\n"
    ]
